# consent-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
consent_audit/: audit.py  browser.py  cli.py  detect.py  parse.py  report.py
sites/: example.com.yaml
skills/consent-audit/: SKILL.md
tests/: test_analyse.py  test_detect.py  test_parse.py
tests/fixtures/: device_id_evidence.json
