[project]
name = "consent-audit"
version = "0.1.0"
description = "Audit web consent banners and detect device-fingerprint-based re-identification across isolated browser contexts."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "playwright>=1.48",
    "pyyaml>=6.0",
    "pydantic>=2.8",
    "rich>=13.7",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
consent-audit = "consent_audit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["consent_audit"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "network: tests that require live network access",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
